--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
+# VS Code stuff
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+
+# Local History for VS Code
+.history/
+
+# Folders
+bin/
+obj/
+
 # Prerequisites
 *.d
 
