Sad makefile radi

--- a/src/makefile
+++ b/src/makefile
@@ -1,10 +1,10 @@
 # To "make"       run in terminal: "make client" or "make server"
 # To "make clean" run in terminal: "make client_clean" or "make server_clean"
 client:
-	make -f src/makefile.client
+	make -f makefile.client
 client_clean:
-	make clean -f src/makefile.client
+	make clean -f makefile.client
 server:
-	make -f src/makefile.server
+	make -f makefile.server
 server_clean:
-	make clean -f src/makefile.server
+	make clean -f makefile.server
