--- a/src/makefile.server
+++ b/src/makefile.server
@@ -5,7 +5,7 @@ CFLAGS=-ggdb -I$(IDIR) -Wall
 ODIR=obj
 LDIR =../lib
 
-LIBS=-lm
+LIBS=-lm -pthread
 
 _DEPS = #server.h
 DEPS = $(patsubst %,$(IDIR)/%,$(_DEPS))
