--- a/src/makefile.client
+++ b/src/makefile.client
@@ -29,7 +29,7 @@ $(ODIR)/%.o: %.c $(DEPS)
 
 # the build target executable:
 client: $(OBJ)
-	gcc -o $@ $^ $(CFLAGS) $(LIBS)
+	gcc -o $@ $^ userFunctions.c $(CFLAGS) $(LIBS)
 
 # The .PHONY rule keeps make from doing something with a file named clean
 .PHONY: clean
